note command line -Xlog:gc*=info in B_LogGC example