@@ -3,6 +3,7 @@ package feature.jfr.streaming;
 public class B_LogGC {
 
     public static void main(String[] args) {
+        //Run with command line option: -Xlog:gc*=info
         A_TestApp.main(null);
     }
 
